(fix) Normalize diagonal width of 'x' button on mobile

--- a/src/scss/components/hamburger-toggle.scss
+++ b/src/scss/components/hamburger-toggle.scss
@@ -10,15 +10,19 @@ button.hamburger-menu {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 1rem;
-    height: 1rem;
+    width: 1.22rem;
+    height: 1.18rem;
 
     cursor: pointer;
     padding: 0;
     z-index: 10;
 
     &.active {
+      width: 1.28rem;
+
       .bars {
+        height: 0.14rem;
+
         &:first-child {
           transform: rotate(45deg);
         }
@@ -36,7 +40,7 @@ button.hamburger-menu {
     .bars {
       z-index: 99999;
       width: 100%;
-      height: 0.18rem;
+      height: 0.1rem;
       background: var(--text-secondary);
       border-radius: 4px;
       transition: all 0.3s linear;
